--- a/healthcare_app/www/index.html
+++ b/healthcare_app/www/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" href="/assets/healthcare_app/frontend/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frappe UI App</title>
-    <script type="module" crossorigin src="/assets/healthcare_app/assets/index.8cbc097c.js"></script>
-    <link rel="stylesheet" href="/assets/healthcare_app/assets/index.16a31178.css">
+    <script type="module" crossorigin src="/assets/healthcare_app/frontend/assets/index.06401eea.js"></script>
+    <link rel="stylesheet" href="/assets/healthcare_app/frontend/assets/index.4e51c0dc.css">
   </head>
   <body>
     <div id="app"></div>
