--- a/healthcare_app/www/index.html
+++ b/healthcare_app/www/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/assets/healthcare_app/frontend/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Frappe UI App</title>
-  <script type="module" crossorigin src="/assets/healthcare_app/frontend/assets/index.7bc4df69.js"></script>
-  <link rel="stylesheet" href="/assets/healthcare_app/frontend/assets/index.95eb1c43.css">
+  <title>Hospital</title>
+  <script type="module" crossorigin src="/assets/healthcare_app/frontend/assets/index.abd1d6ca.js"></script>
+  <link rel="stylesheet" href="/assets/healthcare_app/frontend/assets/index.3cd3a7ba.css">
 </head>
 
 <body>
