--- a/healthcare_app/public/frontend/index.html
+++ b/healthcare_app/public/frontend/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/assets/healthcare_app/frontend/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frappe UI App</title>
-    <script type="module" crossorigin src="/assets/healthcare_app/frontend/assets/index.61383cef.js"></script>
-    <link rel="stylesheet" href="/assets/healthcare_app/frontend/assets/index.c287247a.css">
-  </head>
-  <body>
-    <div id="app"></div>
-    <div id="modals"></div>
-    <div id="popovers"></div>
 
-    <script> window.csrf_token = '{{ csrf_token }}'; </script>
-    
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/assets/healthcare_app/frontend/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hospital</title>
+  <script type="module" crossorigin src="/assets/healthcare_app/frontend/assets/index.e83d388a.js"></script>
+  <link rel="stylesheet" href="/assets/healthcare_app/frontend/assets/index.8e28aafd.css">
+</head>
+
+<body>
+  <div id="app"></div>
+  <div id="modals"></div>
+  <div id="popovers"></div>
+
+  <script> window.csrf_token = '{{ csrf_token }}'; </script>
+
+</body>
+
 </html>
