--- a/healthcare_app/www/index.html
+++ b/healthcare_app/www/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/assets/healthcare_app/frontend/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Frappe UI App</title>
-  <script type="module" crossorigin src="/assets/healthcare_app/frontend/assets/index.61383cef.js"></script>
-  <link rel="stylesheet" href="/assets/healthcare_app/frontend/assets/index.c287247a.css">
+  <title>Hospital</title>
+  <script type="module" crossorigin src="/assets/healthcare_app/frontend/assets/index.e83d388a.js"></script>
+  <link rel="stylesheet" href="/assets/healthcare_app/frontend/assets/index.8e28aafd.css">
 </head>
 
 <body>
